--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-kurento-utils": "^6.7.1",
     "react-native-webrtc": "^1.67.1",
     "react-native-websocket": "^1.0.2",
     "socket.io-client": "^2.1.1"
